welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: missing arguments for method lessBy10 in class lessBy10;
follow this method with `_' if you want to treat it as a partially applied function
  var x=Math.min(lessBy10)
                 ^lessBy10:3: error: missing arguments for method lessBy10 in class lessBy10;
follow this method with `_' if you want to treat it as a partially applied function
  var z=Math.max(lessBy10)
                 ^